Added Makefile for cJSON library

--- a/c/lib/3rdparty/Makefile
+++ b/c/lib/3rdparty/Makefile
@@ -5,12 +5,16 @@
 # @author Yvan Castilloux
 
 # create all libraries -> call all makefiles in subdirectories
-SUBTARGETS=3rdparty libhttpcomm libpipecomm libconfigio libiotxml
+SUBTARGETS=cJSON
 
 all:
 	for d in $(SUBTARGETS); do \
 		make -C $$d; \
 	done
+	
+	# TODO fix library paths in dependents to point to this relative directory
+	# You shoud run this command manually when it complains about -lppcsocket
+	# sudo ln -s -f ${PPCHUBDIR}/lib/libppcsocket/libppsocket.so /lib/libppcsocket.so
 
 clean:
 	for d in $(SUBTARGETS); do \
