--- a/c/apps/proxyserver/Makefile
+++ b/c/apps/proxyserver/Makefile
@@ -16,7 +16,10 @@ SOURCES_C = ${TARGET}.c
 SOURCES_C += ./clientmanager/proxyclientmanager.c
 SOURCES_C += ./agent/proxyagent.c
 SOURCES_C += ./cli/proxycli.c
-SOURCES_C += ./activation/proxyactivation.c
+SOURCES_C += ./activation/proxyactivation/proxyactivation.c
+SOURCES_C += ./activation/login/login.c
+SOURCES_C += ./activation/user/user.c
+SOURCES_C += ./activation/getactivationinfo/getactivationinfo.c
 SOURCES_C += ./proxymanager/proxymanager.c
 
 SOURCES_C += ../../iot/proxy/proxy.c
@@ -41,6 +44,10 @@ CFLAGS += -I./clientmanager
 CFLAGS += -I./agent
 CFLAGS += -I./cli
 CFLAGS += -I./activation
+CFLAGS += -I./activation/proxyactivation
+CFLAGS += -I./activation/login
+CFLAGS += -I./activation/user
+CFLAGS += -I./activation/getactivationinfo
 CFLAGS += -I./proxymanager
 CFLAGS += -I../../iot/proxy 
 CFLAGS += -I../../iot/eui64 
