Updated the example non-volatile configuration file

--- a/c/apps/proxyserver/proxy_example.conf
+++ b/c/apps/proxyserver/proxy_example.conf
@@ -1,8 +1,9 @@
-PROXY_ACTIVATION_URL=developers.peoplepowerco.com/espapi/rest/hubActivation
+PROXY_REBOOTS=0
 PROXY_DEVICE_TYPE=3
-CLOUD_HOST=developers.peoplepowerco.com
+CLOUD_HOST=developer.peoplepowerco.com
 CLOUD_USE_SSL=false
 CLOUD_PORT=8080
 CLOUD_URI=deviceio/ml
-CLOUD_ACTIVATION_KEY=
-PROXY_REBOOTS=
+APPLICATION_API_URL=developer.peoplepowerco.com/espapi/rest
+USER_ACTIVATION_USERNAME=
+CLOUD_AUTHENTICATION_KEY=
