support new device id format

--- a/devices/c/lib/libiotxml/Makefile
+++ b/devices/c/lib/libiotxml/Makefile
@@ -45,7 +45,7 @@ LINK_FLAG = -shared -o $(RESULT_DIR)/$(LIB_NAME).so $(OBJECTS)
 
 OBJECTS=$(SOURCES:.c=.o)
 LDEXTRA+=$(PPCLIBPATH) $(LIBRT) $(LIBXML2) $(LIBCURL) -lpthread
-LOCALINCLUDEPATH =
+LOCALINCLUDEPATH = -I../../apps/proxyserver/
 
 all: dynlib staticlib
 
