Update application API url via App API get FebrUX connection settings

--- a/apps/proxyserver/Makefile
+++ b/apps/proxyserver/Makefile
@@ -17,6 +17,7 @@ SOURCES_C += ./clientmanager/proxyclientmanager.c
 SOURCES_C += ./agent/proxyagent.c
 SOURCES_C += ./cli/proxycli.c
 SOURCES_C += ./activation/proxyactivation/proxyactivation.c
+SOURCES_C += ./activation/settings/settings.c
 SOURCES_C += ./activation/login/login.c
 SOURCES_C += ./activation/user/user.c
 SOURCES_C += ./activation/getactivationinfo/getactivationinfo.c
@@ -45,6 +46,7 @@ CFLAGS += -I./clientmanager
 CFLAGS += -I./agent
 CFLAGS += -I./cli
 CFLAGS += -I./activation
+CFLAGS += -I./activation/settings
 CFLAGS += -I./activation/proxyactivation
 CFLAGS += -I./activation/login
 CFLAGS += -I./activation/user
