update config file example, global variables, and Makefile for 3rd libraries.

--- a/apps/proxyserver/proxy_example.conf
+++ b/apps/proxyserver/proxy_example.conf
@@ -1,9 +1,11 @@
+APPLICATION_API_URL=sbox.presencepro.com:80/cloud/xml
+PROXY_DEVICE_TYPE=32
 PROXY_REBOOTS=0
-PROXY_DEVICE_TYPE=3
-CLOUD_HOST=developer.peoplepowerco.com
-CLOUD_USE_SSL=false
-CLOUD_PORT=8080
+API_KEY=
+CLOUD_HOST=sbox.peoplepowerco.com
+CLOUD_PORT=80
 CLOUD_URI=deviceio/ml
-APPLICATION_API_URL=developer.peoplepowerco.com/espapi/rest
-USER_ACTIVATION_USERNAME=
-CLOUD_AUTHENTICATION_KEY=
+CLOUD_USE_SSL=false
+CLOUD_NAME=sbox
+APPLICATION_API_UPDATE_PERIOD=3600
+DATA_FORMAT=json
